# O-Language

./: .editorconfig  .gitignore  OLanguageParser.sln  README.md
CDC/: CMakeLists.txt  cdc.c  cdc.h  cdc_asm_arm64.S  cdc_asm_gnu.S
O-ByteCode-generator/: CMakeLists.txt  Geneerator.cpp  Geneerator.h  Geneerator.hpp
O-Language-documentation/: BASICS.md  DOCS.md  FUNCTIONS.md  OPERATORS.md  ORDER_AND_CYCLES.md  POINTERS.md  STRUCTURES.md  VARIABLES.md
O-Language-documentation/STD_LIB/: STDLIBDOCMAIN.md  std.olf.md
OAppKit/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  InterruptDefinitions.h  InterruptImplemantation.mm  library.cpp
OCompiler/: CMakeLists.txt  CompilerSources.cpp  CompilerSources.h  OCompiler.vcxproj  OCompiler.vcxproj.filters  main.cpp
OCompilerBase/: BaseTypes.h  CMakeLists.txt  OCompilerBase.vcxitems
OCompilerMACOS/: CMakeLists.txt  main.cpp
OLanguageParser/: Analyser.cpp  Analyser.h  OLanguageParser.vcxproj  OLanguageParser.vcxproj.filters  main.cpp
OLanguageSematicAnalyser/: CMakeLists.txt  OLanguageSematicAnalyser.vcxproj  OLanguageSematicAnalyser.vcxproj.filters  SematicAnalyser.cpp  SematicAnalyser.h
OLanguageSematicAnalyser/buid/: Makefile  cmake_install.cmake
OLexicalAnalyser/: Analyser.cpp  Analyser.h  CMakeLists.txt  OLexicalAnalyser.vcxproj  OLexicalAnalyser.vcxproj.filters  pch.h
OPreProccessor/: CMakeLists.txt  Preproccesor.cpp  Preproccesor.h
OStd-file-IO/: CMakeLists.txt  library.cpp
OStdLib/: Io.olf  libs.conf
OStdLib/STD_HEADERS/: AppKit.olf  AppKitEvents.olf  Array.olf  ConsoleIO.olf  DynamicArray.olf  File.olf  Io.olf  List.olf  MetalColorFormats.olf  MetalKit.olf  String.olf  dynamic_lib.olf  fileIO.olf  math.olf  packages.olf  packedString.olf  std.olf  stdGeometry.olf  stdString.olf  stdTypes.olf
OStdLib/STD_MAC_BIN/: libOAppKit.dylib  libOStd_file_IO.dylib  libOVM_Console_out.dylib
OVM_Console_out/: CMakeLists.txt  library.cpp
OVM_SDK/: CMakeLists.txt  OVM_SDK.h
OVM_module_example/: CMakeLists.txt  main.cpp
OVirtualMachine/: CMakeLists.txt  LogicUnit.cpp  LogicUnit.h  Memory.cpp  Memory.h  Scenary.cpp  Scenary.h  main.cpp
OtoOVMCompiler/: CMakeLists.txt  OtoOTranslator.cpp  OtoOTranslator.h
OtoPythonTranslator/: CMakeLists.txt  Call.cpp  Call.h  OtoPythonTranslator.vcxproj  OtoPythonTranslator.vcxproj.filters  Translator.cpp  Translator.h  pch.h
